libs/bng/test/negative/N0011_rate_symbol_undefined.bngl

begin molecule types
   A()
   B()
   C()
end molecule types

begin reaction rules
  A() + B() -> C() a
end reaction rules
